--- a/angular-src/src/app/app.component.html
+++ b/angular-src/src/app/app.component.html
@@ -1,10 +1,22 @@
-<!--The whole content below can be removed with the new code.-->
-<div style="text-align:center">
-  <h1>
-     {{title}}!
-  </h1>
+﻿<!-- main app container -->
+<div class="jumbotron">
    
-  <app-view-todo> </app-view-todo>
 
-  
+<div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                    <alert></alert>
+                    <router-outlet></router-outlet>
+            </div>
+        </div>
+    </div>
+
 </div>
+<!-- credits -->
+<div class="text-center">
+    <p>
+        <a href="http://www.oracle.com" target="_top">Sample Angular / Node.js / Oracle app</a>
+    </p>
+</div>
+
+
